3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Document save_object(s) and save_map() options, add enum for doc linking.
 common/loader.l map.c
 crossedit/Edit.c
 include/map.h
 random_maps/standalone.c
 server/c_wiz.c server.c swap.c weather.c
Nicolas Weeger 2007-05-20

Fix bug #1713140: sustenance overflow.
include/player.h: change digestion from sint8 to sint16. Change other fields
 the same to avoid potential overflows.
Nicolas Weeger 2007-05-20

server/disease.c: Add check to make sure symptom was not destroyed
  when victim dies - otherwise we get double remove/free.
MSW 2007-05-19

Static buffer removal, remove unused parameters, use safe string functions.
 random_maps/decor.c door.c exit.c expand2x.c floor.c monster.c random_map.c
  rproto.h style.c treasure.c wall.c
 server/server.c
Nicolas Weeger 2007-05-18

 server/weather.c: remove static buffer.
Nicolas Weeger 2007-05-17

server/server.c: player count tracking will get false if moving from a map to the same.
Nicolas Weeger 2007-05-17

Remove obsolete funcpoint.h file.
 include/funcpoint.h: removed
 include/global.h Makefile.am
 crossedit/xutil.c
 common/arch.c button.c item.c living.c logger.c los.c map.c object.c player.c time.c treasure.c utils.c
Nicolas Weeger 2007-05-17

Don't pass variables that aren't needed, remove prototype confusion. Document.
 server/weather.c
Nicolas Weeger 2007-05-17

Change weather_effect() to use mapstruct* instead of filename.
 common/map.c
 crossedit/stubs.c
 include/funcpoint.h sproto.h
 random_maps/standalone.c
 server/weather.c
 test/unit/common/stubs_common.c
 test/unit/crossedit/stubs_crossedit.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c