@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Misc memory fixes. Remove obsolete "inventory" line.
+ common/image.c links.c loader.l player.c re-cmp.c shstr.c treasure.c
+Nicolas Weeger 2007-05-20
+
 Document save_object(s) and save_map() options, add enum for doc linking.
  common/loader.l map.c
  crossedit/Edit.c
